terraform/private-subnets.tf
/* Public subnet */
resource "aws_subnet" "private" {
  # vpc_id            = "${aws_vpc.default.id}"
  vpc_id            = "${var.vpc}"
  cidr_block        = "${var.private_subnet_cidr}"
  availability_zone = "${var.aws_region_subnet}"
  map_public_ip_on_launch = false
  depends_on = ["aws_instance.nat"]
  tags {
    Name = "private"
  }
}

/* Routing table for public subnet */
resource "aws_route_table" "private" {
  # vpc_id = "${aws_vpc.default.id}"
  vpc_id            = "${var.vpc}"
  route {
    cidr_block = "0.0.0.0/0"
    instance_id = "${aws_instance.nat.id}"
  }
}

/* Associate the routing table to public subnet */
resource "aws_route_table_association" "private" {
   subnet_id = "${aws_subnet.private.id}"
   route_table_id = "${aws_route_table.private.id}"
}
